quackstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quackstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quackstack
  template:
    metadata:
      labels:
        app: quackstack
    spec:
      containers:
        - name: quackstack
          image: ghcr.io/python-discord/quackstack
          imagePullPolicy: Always
          ports:
            - containerPort: 80
